src/components/Footer/style.scss
@import "../../variables/variables.scss";

.footer {
    background-color: #46434e;
    &__content {
        height: 200px;
        display: flex;
        flex-direction: column;
        justify-content: center;
        margin: 0 auto;
        border-top: 1px solid #7e7e7e;

        @media (max-width: 768px) {
            height: 150px;
        }
    }
    &__social {
        a {
            color: #fff;
            margin-bottom: 15px !important;
            transition: all 0.3s;
            &:hover {
                color: #ed7d31;
            }
        }
    }
    &__rules {
        p {
            font-family: $font-primary;
            font-style: normal;
            font-weight: normal;
            font-size: 14px;
            line-height: 24px;
            /* or 171% */

            text-align: center;

            color: #c4c4c4;
            margin-bottom: 0;

            @media (max-width: 768px) {
                font-size: 12px;
                line-height: 20px;
            }
        }
    }
}

